--- a/endpoint/tox.ini
+++ b/endpoint/tox.ini
@@ -5,7 +5,7 @@ skip_missing_interpreters = true
 [testenv]
 passenv =
     RABBITMQ_INTEGRATION_TEST_URI
-deps = ../globus_compute/
+deps = ../globus_compute_sdk/
 extras = test
 usedevelop = true
 commands =
@@ -17,7 +17,7 @@ commands =
 deps =
     mypy==0.950
     types-requests
-    ../globus_compute/
+    ../globus_compute_sdk/
 commands = mypy globus_compute_endpoint/ {posargs}
 
 [testenv:publish-release]
