--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -106,7 +106,7 @@ jobs:
 
   publish:
     # only trigger on pushes to the main repo (not forks, and not PRs)
-    if: ${{ github.repository == 'funcx-faas/funcX' && github.event_name == 'push' }}
+    if: ${{ github.repository == 'funcx-faas/funcX' && github.event_name == 'push' && github.ref == 'refs/heads/main' }}
     needs:
       - lint
       - test-sdk
