--- a/endpoint/setup.cfg
+++ b/endpoint/setup.cfg
@@ -1,6 +1,6 @@
 [isort]
 profile = black
-known_first_party = globus_compute,globus_compute_endpoint
+known_first_party = globus_compute_sdk,globus_compute_endpoint
 
 [flake8]
 # config to be black-compatible
