Update package/deploy files for compute branding

--- a/compute_endpoint/setup.cfg
+++ b/compute_endpoint/setup.cfg
@@ -1,6 +1,6 @@
 [isort]
 profile = black
-known_first_party = funcx,funcx_endpoint
+known_first_party = globus-compute-sdk, globus-compute-endpoint
 
 [flake8]
 # config to be black-compatible
