--- a/compute_sdk/tox.ini
+++ b/compute_sdk/tox.ini
@@ -14,7 +14,7 @@ commands =
 
 [testenv:mypy]
 deps = mypy
-commands = mypy funcx/
+commands = mypy globus_compute_sdk/
 
 [testenv:publish-release]
 skip_install = true
