--- a/compute_endpoint/tox.ini
+++ b/compute_endpoint/tox.ini
@@ -5,7 +5,7 @@ skip_missing_interpreters = true
 [testenv]
 passenv =
     RABBITMQ_INTEGRATION_TEST_URI
-deps = ../funcx_sdk/
+deps = ../compute_sdk/
 extras = test
 usedevelop = true
 commands =
@@ -17,8 +17,8 @@ commands =
 deps =
     mypy==0.950
     types-requests
-    ../funcx_sdk/
-commands = mypy funcx_endpoint/ {posargs}
+    ../compute_sdk/
+commands = mypy globus_compute_endpoint/ {posargs}
 
 [testenv:publish-release]
 skip_install = true
