--- a/helm/funcx_endpoint/values.yaml
+++ b/helm/funcx_endpoint/values.yaml
@@ -5,18 +5,18 @@
 replicaCount: 1
 funcXServiceAddress: https://api2.funcx.org
 image:
-  repository: funcx/kube-endpoint
+  repository: compute/kube-endpoint
   tag: main-3.10
   pullPolicy: Always
 
 workerDebug: false
 workerImage: python:3.10
-workerInit: pip install funcx-endpoint>=1.0.10
+workerInit: pip install globus-compute-endpoint>=2.0.0
 workerNamespace: default
 logDir: /tmp/worker_logs
 
 rbacEnabled: true
-nameOverride: funcx-endpoint
+nameOverride: globus-compute-endpoint
 
 initMem: 500Mi
 maxMem: 1600Mi
