--- a/smoke_tests/tox.ini
+++ b/smoke_tests/tox.ini
@@ -12,9 +12,9 @@ passenv =
 # don't try to install a package
 skip_install = true
 deps =
-    funcx
-    funcx-endpoint
-    funcx-common
+    globus-compute-sdk
+    globus-compute-endpoint
+    globus-compute-common
     pytest
 commands = pytest -v {posargs}
 
@@ -28,8 +28,8 @@ passenv =
 # don't try to install a package
 skip_install = true
 deps =
-    -e ../funcx_sdk
-    -e ../funcx_endpoint
+    -e ../compute_sdk
+    -e ../compute_endpoint
     pytest
 commands = pytest -v {posargs}
 
