Add allowlist_externals in addition to whitelist_externals

--- a/compute_sdk/tox.ini
+++ b/compute_sdk/tox.ini
@@ -22,6 +22,7 @@ deps = build
        twine
 # clean the build dir before rebuilding
 whitelist_externals = rm
+allowlist_externals = rm
 commands_pre = rm -rf dist/
 commands = python -m build
            twine upload dist/*
