Rename `executor` to `engine` in YAML config
Our YAML config schema should reflect the impending change to replace
executors with engines.

--- a/docs/configs/kube.yaml
+++ b/docs/configs/kube.yaml
@@ -2,7 +2,7 @@ heartbeat_period: 15
 heartbeat_threshold: 200
 log_dir: '.'
 
-executor:
+engine:
     label: Kubernetes_funcX
     max_workers_per_node: 1
 
