--- a/compute_endpoint/tox.ini
+++ b/compute_endpoint/tox.ini
@@ -15,10 +15,11 @@ commands =
 
 [testenv:mypy]
 deps =
-    mypy==0.950
+    mypy==1.3.0
     types-requests
     ../compute_sdk/
-commands = mypy globus_compute_endpoint/ {posargs}
+commands = mypy -p globus_compute_endpoint {posargs}
+
 
 [testenv:publish-release]
 skip_install = true
