Update the polaris example config to use double quotes and set filesystems by default

--- a/docs/configs/polaris.yaml
+++ b/docs/configs/polaris.yaml
@@ -26,8 +26,8 @@ engine:
         cpus_per_node: 32
         select_options: ngpus=4
 
-        # e.g., '#PBS -l filesystems=home:grand:eagle\n#PBS -k doe'
-        scheduler_options: {{ OPTIONS }}
+        # e.g., "#PBS -l filesystems=home:grand:eagle\n#PBS -k doe"
+        scheduler_options: "#PBS -l filesystems=home:grand:eagle"
 
         # Node setup: activate necessary conda environment and such
         worker_init: {{ COMMAND }}
