--- a/docs/configs/cooley.yaml
+++ b/docs/configs/cooley.yaml
@@ -16,11 +16,11 @@ engine:
 
         # string to prepend to #COBALT blocks in the submit
         # script to the scheduler
-        # eg: '#COBALT -t 50'
+        # eg: "#COBALT -t 50"
         scheduler_options: {{ OPTIONS }}
 
         # Command to be run before starting a worker
-        # e.g., 'module load Anaconda; source activate compute_env'
+        # e.g., "module load Anaconda; source activate compute_env"
         worker_init: {{ COMMAND }}
 
         # Scale between 0-1 blocks with 2 nodes per block
