--- a/docs/configs/cori.yaml
+++ b/docs/configs/cori.yaml
@@ -17,11 +17,11 @@ engine:
 
         # string to prepend to #SBATCH blocks in the submit
         # script to the scheduler
-        # eg: '#SBATCH --constraint=knl,quad,cache'
+        # eg: "#SBATCH --constraint=knl,quad,cache"
         scheduler_options: {{ OPTIONS }}
 
         # Command to be run before starting a worker
-        # e.g., 'module load Anaconda; source activate parsl_env'
+        # e.g., "module load Anaconda; source activate parsl_env"
         worker_init: {{ COMMAND }}
 
         # Increase timeout as Cori's scheduler may be slow
