--- a/docs/configs/frontera.yaml
+++ b/docs/configs/frontera.yaml
@@ -22,7 +22,7 @@ engine:
         scheduler_options: {{ OPTIONS }}
 
         # Command to be run before starting a worker
-        # e.g., 'module load Anaconda; source activate parsl_env'
+        # e.g., "module load Anaconda; source activate parsl_env"
         worker_init: {{ COMMAND }}
 
         # Add extra time for slow scheduler responses
