--- a/docs/configs/perlmutter.yaml
+++ b/docs/configs/perlmutter.yaml
@@ -20,7 +20,7 @@ engine:
         scheduler_options: {{ OPTIONS }}
 
         # Command to be run before starting a worker
-        # e.g., 'module load Anaconda; source activate parsl_env'
+        # e.g., "module load Anaconda; source activate parsl_env"
         worker_init: {{ COMMAND }}
 
         # Slurm scheduler on Cori can be slow at times,
