--- a/docs/configs/worker_pinning.yaml
+++ b/docs/configs/worker_pinning.yaml
@@ -6,7 +6,7 @@ engine:
     # generated environment variable. In this case, one of 0, 1, 2, or 3.
     # Alternatively, specific strings may be utilized.
     available_accelerators: 4
-    # available_accelerators: ['opencl:gpu:1', 'opencl:gpu:2']  # alternative
+    # available_accelerators: ["opencl:gpu:1", "opencl:gpu:2"]  # alternative
 
     provider:
         type: LocalProvider
