Update Parsl version to 2023.7.3
Besides the incremental updates, the main motivation is for [PR #2775 "Ensure
timer.cancel() is always called"](https://github.com/Parsl/parsl/pull/2775)

Due to timing, this also coincides with the EOL for Python 3.7, so update the
associated CI workflows accordingly.

[sc-25117]

--- a/compute_sdk/tox.ini
+++ b/compute_sdk/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{310,39,38,37}
+envlist = py{311,310,39,38,37}
 skip_missing_interpreters = true
 
 [testenv]
@@ -14,7 +14,7 @@ commands =
 
 [testenv:mypy]
 deps = mypy
-commands = mypy globus_compute_sdk/
+commands = mypy -p globus_compute_sdk {posargs}
 
 [testenv:publish-release]
 skip_install = true
