--- a/.github/workflows/daily.yaml
+++ b/.github/workflows/daily.yaml
@@ -14,7 +14,7 @@ jobs:
         ref: main
     - uses: actions/setup-python@v1
       with:
-        python-version: 3.7
+        python-version: "3.11"
     - run: python -m pip install -U pip setuptools
     - run: python -m pip install 'tox'
     - name: run smoke tests (dev)
