--- a/.github/workflows/hourly.yaml
+++ b/.github/workflows/hourly.yaml
@@ -19,7 +19,7 @@ jobs:
         ref: main
     - uses: actions/setup-python@v1
       with:
-        python-version: 3.7
+        python-version: "3.11"
     - run: python -m pip install -U pip setuptools
     - run: python -m pip install tox
     - name: Run smoke tests to check liveness of hosted services
