--- a/.github/workflows/smoke_test.yaml
+++ b/.github/workflows/smoke_test.yaml
@@ -20,7 +20,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v1
       with:
-        python-version: 3.7
+        python-version: "3.11"
     - run: python -m pip install -U pip setuptools
     - run: python -m pip install tox
     - name: Run smoke tests (localdeps)
