--- a/compute_endpoint/tox.ini
+++ b/compute_endpoint/tox.ini
@@ -15,8 +15,9 @@ commands =
 
 [testenv:mypy]
 deps =
-    mypy==1.3.0
+    mypy==1.4.0
     types-requests
+    types-click
     ../compute_sdk/
 commands = mypy -p globus_compute_endpoint {posargs}
 
