Explicitly define engine type in example configs

--- a/docs/configs/stampede2.yaml
+++ b/docs/configs/stampede2.yaml
@@ -1,6 +1,7 @@
 display_name: Stampede2.TACC.batch
 
 engine:
+  type: HighThroughputEngine
   address:
     type: address_by_interface
     ifname: em3
