Two forgotten files to endpoint packaging (#1290)
These are necessary for the multi-tenant work.

[sc-26865]

--- a/compute_endpoint/MANIFEST.in
+++ b/compute_endpoint/MANIFEST.in
@@ -1,2 +1,4 @@
 include PyPI.md
 include globus_compute_endpoint/endpoint/config/default_config.yaml
+include globus_compute_endpoint/endpoint/config/user_config_template.yaml
+include globus_compute_endpoint/endpoint/config/user_environment.yaml
