--- a/compute_sdk/tox.ini
+++ b/compute_sdk/tox.ini
@@ -13,7 +13,7 @@ commands =
     coverage report --skip-covered
 
 [testenv:mypy]
-deps = mypy
+deps = mypy==1.5.1
 commands = mypy -p globus_compute_sdk {posargs}
 
 [testenv:publish-release]
