Show 5 slowest test durations (#1307)
Motivated by a (slow) progression of tests beginning to take longer, help to
identify the culprits on a regular basis.

--- a/compute_endpoint/tox.ini
+++ b/compute_endpoint/tox.ini
@@ -10,7 +10,7 @@ extras = test
 usedevelop = true
 commands =
     coverage erase
-    coverage run -m pytest {posargs}
+    coverage run -m pytest --durations 5 {posargs}
     coverage report
 
 [testenv:mypy]
