--- a/compute_sdk/tox.ini
+++ b/compute_sdk/tox.ini
@@ -9,7 +9,7 @@ usedevelop = true
 extras = test
 commands =
     coverage erase
-    coverage run -m pytest {posargs}
+    coverage run -m pytest --durations 5 {posargs}
     coverage report --skip-covered
 
 [testenv:mypy]
