--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,7 +49,7 @@ jobs:
           python-version: "3.11"
       - name: install requirements
         run: |
-          python -m pip install --upgrade setuptools
+          python -m pip install --upgrade pip setuptools
           python -m pip install './compute_sdk'
           python -m pip install './compute_endpoint'
           python -m pip install safety
