add test to smoke_tests

--- a/smoke_tests/tox.ini
+++ b/smoke_tests/tox.ini
@@ -9,6 +9,7 @@ passenv =
     COMPUTE_LOCAL_KNOWN_FUNCTION_ID
     FUNCX_SMOKE_CLIENT_ID
     FUNCX_SMOKE_CLIENT_SECRET
+    GLOBUS_SDK_ENVIRONMENT
 # don't try to install a package
 skip_install = true
 deps =
