--- a/docs/configs/perlmutter.yaml
+++ b/docs/configs/perlmutter.yaml
@@ -2,29 +2,34 @@ engine:
     type: HighThroughputEngine
     worker_debug: False
 
+    strategy:
+        type: SimpleStrategy
+        max_idletime: 300
+
     address:
         type: address_by_interface
-        ifname: nmnb0
+        ifname: hsn0
 
     provider:
         type: SlurmProvider
-        partition: GPU  # Partition / QOS
 
         # We request all hyperthreads on a node.
+        # GPU nodes have 128 threads, CPU nodes have 256 threads
         launcher:
             type: SrunLauncher
-            overrides: -c 272
+            overrides: -c 128
 
         # string to prepend to #SBATCH blocks in the submit
         # script to the scheduler
-        # eg: #SBATCH --constraint=gpu
+        # For GPUs in the debug qos eg: "#SBATCH --constraint=gpu -q debug"
         scheduler_options: {{ OPTIONS }}
+        # Your NERSC account, eg: "m0000"
+        account: {{ NERSC_ACCOUNT }}
 
         # Command to be run before starting a worker
         # e.g., "module load Anaconda; source activate parsl_env"
         worker_init: {{ COMMAND }}
 
-        # Slurm scheduler on Cori can be slow at times,
         # increase the command timeouts
         cmd_timeout: 120
 
