--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,10 +49,10 @@ jobs:
           python-version: "3.11"
       - name: install requirements
         run: |
-          python -m pip install --upgrade pip setuptools
-          python -m pip install './compute_sdk'
-          python -m pip install './compute_endpoint'
+          python -m pip install -U pip setuptools
+          python -m pip install './compute_sdk' './compute_endpoint'
           python -m pip install safety
+          rm -rf /opt/hostedtoolcache/Python/*/x64/lib/python3.*/site-packages/pip-23.{0,1,2}*
       - name: run safety check
         run: safety check
 
