--- a/smoke_tests/tox.ini
+++ b/smoke_tests/tox.ini
@@ -7,6 +7,11 @@ passenv =
     COMPUTE_LOCAL_ENDPOINT_ID
     COMPUTE_LOCAL_ENDPOINT_NAME
     COMPUTE_LOCAL_KNOWN_FUNCTION_ID
+    # FUNCX_SMOKE_CLIENT_ID and _SECRET are set via github # repo secrets
+    # https://github.com/funcx-faas/funcX/settings/secrets/actions
+    # API_CLIENT_ID and API_CLIENT_SECRET* see daily.yaml:28-29,
+    # smoke_test.yaml:28-29 and hourly.yaml:27-28
+    # Currently we use staging secret for daily and production for the others
     FUNCX_SMOKE_CLIENT_ID
     FUNCX_SMOKE_CLIENT_SECRET
 # don't try to install a package
