Change default engine type to `GlobusComputeEngine`
We will soon mark the `HighThroughputEngine` for deprecation.

--- a/compute_endpoint/globus_compute_endpoint/endpoint/config/default_config.yaml
+++ b/compute_endpoint/globus_compute_endpoint/endpoint/config/default_config.yaml
@@ -1,7 +1,7 @@
 amqp_port: 443
 display_name: null
 engine:
-  type: HighThroughputEngine
+  type: GlobusComputeEngine
   provider:
     type: LocalProvider
     init_blocks: 1
