Update flake8 config for new black version
Black v24.1 now puts ellipses on the same line as function definitions
in some cases, causing flake8 to emit E704. In formatting issues where
black and flake8 disagree, we side with black.

The top-level .flake8 file drives pre-commit's invocation of flake8. For
consistency, the flake8 sections of the setup.cfg files in compute_sdk
and compute_endpoint have also been updated.

--- a/compute_endpoint/setup.cfg
+++ b/compute_endpoint/setup.cfg
@@ -5,7 +5,7 @@ known_first_party = globus-compute-sdk, globus-compute-endpoint
 [flake8]
 # config to be black-compatible
 max-line-length = 88
-ignore = E203,W503,W504
+ignore = W503, W504, E203, B008, E704
 
 [mypy]
 # strict = true
