--- a/compute_sdk/setup.cfg
+++ b/compute_sdk/setup.cfg
@@ -5,7 +5,7 @@ known_first_party = globus-compute-sdk, globus-compute-endpoint
 [flake8]
 # config to be black-compatible
 max-line-length = 88
-ignore = E203,W503,W504
+ignore = W503, W504, E203, B008, E704
 
 [mypy]
 # strict = true
